fixed hink svg on mobile

--- a/wp-content/themes/think/css/base.scss
+++ b/wp-content/themes/think/css/base.scss
@@ -351,7 +351,7 @@ section#welcome{
 
 			.two--thirds{
 				.large-type{
-					top:2px;
+					top:0px;
 					width:auto;
 					right: -233px !important;
 				}
@@ -411,7 +411,22 @@ section#welcome{
   			left: 195px;
 			width:260px;
 			height:80px;
+			display:none;
 			
+			@media (min-width:1100px){
+				display:block;
+			}
+			
+		}
+
+		@media (min-width:500px){
+			padding-left: 3%;
+  			margin-top: 82px;
+		}
+
+		@media (min-width:980px){
+			padding-left: 80px;
+  			margin-top: 100px;
 		}
 	}
 		
